# django-tables-creator

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  test.py
